base/media/flaresolverr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: flaresolverr
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8191
