base/media/flaresolverr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaresolverr
  namespace: media
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/part-of: homelab
  annotations:
    cert-manager.io/cluster-issuer: stepca-acme
spec:
  ingressClassName: traefik
  rules:
    - host: flaresolverr.sunnyside.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flaresolverr
                port:
                  number: 80
  tls:
    - hosts:
        - flaresolverr.sunnyside.home
      secretName: -tls
